test/typechecker.d/invalid/fns1.surc.bad
n = 5

f(x: Integer): Integer = fndo
	if true
		return 'c'
